# MiRuta

./: .gitignore  Cargo.toml  Dioxus.toml
assets/: main.css
src/: main.rs
support/: Cargo.toml
support/src/: data_storage.rs  lib.rs
travel-plan/: Cargo.toml
travel-plan/src/: cost.rs  lib.rs  plan_item.rs  plans.rs
