[package]
name = "MiRuta"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6.0", features = [] }
travel-plan = { path = "travel-plan" }
support = { path = "support" }


[workspace]
members = [
    ".", 
    "support",
    "travel-plan",
]


[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
