[package]
name = "travel-plan"
version = "0.1.0"
edition = "2024"

[dependencies]
support = { path = "../support" }
chrono = { version = "0.4.41", features = ["serde"] } 
iso_currency = { version ="0.5.3", features = ["with-serde"]}
serde = { version = "1.0.219" , features = ["derive"] }
serde_json = "1.0.141"
dioxus = { version = "0.6.0", features = [] }